Fix pinned tabs width when tab scrollbox is visible.
With this change, when the tab scrollbox is visible, selecting a pinned tab to the left is not very accurate, the mouse has to hover more to the left than needs to be. This is because the .tabbrowser-tab element is shifted to the left via the padding-left property.

I still need to figure out how to solve this, I solved this via pointer-events:none for .tab-background element, but I can't do that on the main .tabbrowser-tab element.

--- a/userChrome-light.css
+++ b/userChrome-light.css
@@ -37,6 +37,15 @@
   border: none !important;
 }
 
+/* Styles to account for when tab scrollbar is visible, and margin-inline-start kicks in */
+.tabbrowser-tab[pinned="true"] {
+  width: 40px !important; /* Actual photon pinned tab is 41px, but 40px removes pixelated artifact from pinned tab favicon */
+}
+
+.tabbrowser-tab[pinned="true"][style^="margin-inline-start"] {
+  padding-left: 12px !important;
+}
+
 /* Remove unneeded styles from Photon */
 .tabbrowser-tab::before,
 .tabbrowser-tab::after {
